logs/techwriter.log
Listing '.'...
Listing './bin'...
Compiling './bin/tw2html.py'...
Compiling './bin/tw2latex.py'...
Compiling './bin/tw2odt.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TechWriter'...
Listing './lib/python3.5/site-packages/TechWriter/Writers'...
Compiling './lib/python3.5/site-packages/TechWriter/Writers/htmlwriter.py'...
***   File "./lib/python3.5/site-packages/TechWriter/Writers/htmlwriter.py", line 278
    print "Incomplete/empty structure at %x" % structure.location
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/TechWriter/Writers/latexwriter.py'...
***   File "./lib/python3.5/site-packages/TechWriter/Writers/latexwriter.py", line 320
    print "Incomplete/empty structure at %x" % structure.location
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/TechWriter/Writers/opendocumentwriter.py'...
***   File "./lib/python3.5/site-packages/TechWriter/Writers/opendocumentwriter.py", line 399
    print "Incomplete/empty structure at %x" % structure.location
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/TechWriter/document.py'...
***   File "./lib/python3.5/site-packages/TechWriter/document.py", line 708
    print indent * "  ", parent, parent.style.name
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/TechWriter/objects.py'...
***   File "./lib/python3.5/site-packages/TechWriter/objects.py", line 178
    print "Unknown style type (%x) at offset %x in structure at %x" % (table[1], i + 7, self.location)
                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TechWriter-0.22.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
